<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/grad_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/radio_group_1"
            >

            <RadioButton
                android:id="@+id/rg1_rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_poor"
                android:textStyle="bold"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rg1_rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poor"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg1_rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg1_rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg1_rb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excellent"
                android:textStyle="bold"/>
        </RadioGroup>

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:max="5"
            android:progress="0"
            android:thumbTint="#FFFFFF"
            android:layout_margin="16dp"
            />

        <TextView
            android:id="@+id/seek_bar_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading_text"
            android:textSize="12sp"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/radio_group_2">

            <RadioButton
                android:id="@+id/rg2_rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_disorganized"
                android:textStyle="bold"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rg2_rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disorganized"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg2_rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptable"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg2_rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organized"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg2_rb5"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_organized"/>
        </RadioGroup>

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/radio_group_3">

            <RadioButton
                android:id="@+id/rg3_rb1"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_poor"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rg3_rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poor"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg3_rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg3_rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg3_rb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excellent"
                android:textStyle="bold"/>

        </RadioGroup>

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/radio_group_4">

            <RadioButton
                android:id="@+id/rg4_rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strongly_disagree"
                android:textStyle="bold"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rg4_rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disagree"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rg4_rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/neutral"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg4_rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rg4_rb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strongly_agree"
                android:textStyle="bold"/>
        </RadioGroup>

        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/radio_group_5">

            <RadioButton
                android:id="@+id/rg5_rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable"
                android:textStyle="bold"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rg5_rb2"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partially_applicable"/>

            <RadioButton
                android:id="@+id/rg5_rb3"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/somewhat_applicable"/>

            <RadioButton
                android:id="@+id/rg5_rb4"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicable"/>

            <RadioButton
                android:id="@+id/rg5_rb5"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highly_applicable"/>
        </RadioGroup>


        <TextView
            style="@style/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            android:layout_marginTop="8dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/suggestions"
            android:background="@drawable/et_bg"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:inputType="textCapSentences"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_8" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:layout_margin="16dp"
            android:id="@+id/rating_bar"
            android:rating="1"
            android:stepSize="1"
            android:progressTint="#FF9800"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/SUBMIT"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/btn_bg"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>
</ScrollView>